fix: исправление импортов и улучшение фронтенда
- Исправлены импорты в main.py
- Обновлен фронтенд для лучшей мобильной адаптации
- Добавлен .gitignore для исключения временных файлов
- Система готова к пилотному внедрению

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -216,7 +216,7 @@
             submitBtn.textContent = 'Отправка...';
 
             try {
-                const response = await fetch('http://localhost:8000/api/defects', {
+                const response = await fetch('/api/defects', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
